--- a/mybibleVerseProject/vercel.json
+++ b/mybibleVerseProject/vercel.json
@@ -7,7 +7,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "mybibleVerseProject/wsgi.py"
+            "dest": "/"
         }
     ]
 }
